Introduce Dialog Theme for Onboarding

--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
 	<string name="hide">Hide</string>
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
+	<string name="got_it">Got it</string>
 	<string name="delete">Delete</string>
 	<string name="accept">Accept</string>
 	<string name="decline">Decline</string>
